<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proximety</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_register">Registrieren</string>
    <string name="action_login">Anmelden</string>
    <string name="action_email">E-Mail senden</string>
    <string name="title_activity_register">Registrieren</string>
    <string name="title_activity_login">Anmelden</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="password_confirm">Passwort bestätigen</string>
    <string name="map">Karte</string>
    <string name="friends">Freunde</string>
    <string name="friends_add">Freunde hinzufügen</string>
    <string name="requests_open">Offene Anfragen</string>
    <string name="help">Hilfe</string>
    <string name="about">Über</string>
    <string name="settings_general">Allgemeine Einstellungen</string>
    <string name="settings_proximity_alert">Proximety Alarm</string>
    <string name="drawer_open">Navigation öffnen</string>
    <string name="drawer_close">Navigation schliessen</string>
    <string name="title_activity_friend_detail">Freund Details</string>
    <string name="infos">Infos</string>
    <string name="distance">Distanz</string>
    <string name="alarm_on_off">Alarm An/Aus</string>
    <string name="friend_delete">Freund entfernen</string>
    <string name="friend_dummy_name">Hans Landolt</string>
    <string name="details">Details</string>
    <string name="search_title">Suche</string>
    <string name="title_activity_open_request">Anfragen</string>
    <string name="unknown_error_msg">Es ist ein Fehler aufgetreten</string>
    <string name="logout">Abmelden</string>
    <string name="friend_add_info">Falls diese Person noch kein Benutzer von Proximety ist, wird ihr eine Email gesendet.</string>
    <string name="action_invite">Einladen</string>
    <string name="friend_add_success">Die Einladung wurde erfolgreich versendet.</string>
    <string name="welcome_message_title">Willkommen bei Proximety</string>
    <string name="welcome_message">Möchtest Du einen Freund hinzufügen und mit Proximety Alarmen beginnen?</string>
    <string name="welcome_go">Loslegen</string>
    <string name="cancel">Abbrechen</string>
    <string name="na">N/A</string>
    <string name="network_not_available">Keine Internetverbindung vorhanden</string>
    <string name="friend_delete_info">Willst Du diesen Freund wirklich löschen?</string>
    <string name="delete">Löschen</string>
    <string name="friend_refuse">Anfrage ablehnen</string>
    <string name="friend_refuse_info">Willst Du diese Anfrage wirklich ablehnen?</string>
    <string name="refuse">Ablehnen</string>
    <string name="friend_accept">Anfrage annehmen</string>
    <string name="friend_accept_info">Willst Du diese Anfrage wirklich akzeptieren?</string>
    <string name="accept">Akzeptieren</string>
    <string name="setting_saved">Einstellung gespeichert</string>
    <string name="please_wait">Bitte warten…</string>
    <string name="hello_my_friend">Hallo mein Freund..</string>
    <string name="send_email">E-Mail versenden…</string>
    <string name="no_data">Die Anwort beinhaltet keine Daten!</string>
    <string name="notification_proximity_friend">Neue Proximety Freundesanfrage</string>
    <string name="help_text">Helfen muss man sich hier leider selbst…</string>
    <string name="about_text">Über was denn?</string>
    <string name="invalid_option">Ungültige Option ausgewählt</string>
    <string name="from_friend">von </string>
    <string name="alarm_distance">Alarm-Distanz (in km)</string>
    <string name="same_email">Du kannst nicht mit Dir selber befreundet sein.</string>

</resources>
