<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FriendAddActivity" >

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputEmail"
        android:layout_marginTop="20dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEmail"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textEmailAddress">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_add_info"
        android:id="@+id/textView"
        android:layout_below="@+id/inputEmail"
        android:layout_alignLeft="@+id/inputEmail"
        android:layout_alignStart="@+id/inputEmail"
        android:layout_marginTop="35dp"
        android:layout_alignRight="@+id/inputEmail"
        android:layout_alignEnd="@+id/inputEmail" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/action_invite"
        style="@style/ButtonStyle"
        android:onClick="onButtonInviteClick" />
</RelativeLayout>