<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.ffhs.esa.proximety.activities.RegisterActivity" >
    
    	<requestFocus />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textName"
        android:layout_centerHorizontal="true"
        android:ems="10" 
        android:inputType="text"/>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputName"
        android:layout_below="@+id/inputName"
        android:layout_marginTop="20dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textEmail"
        android:layout_below="@+id/textEmail"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputEmail"
        android:layout_below="@+id/inputEmail"
        android:layout_marginTop="20dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textPassword"
        android:layout_below="@+id/textPassword"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputPassword"
        android:layout_below="@+id/inputPassword"
        android:layout_marginTop="20dp"
        android:text="@string/password_confirm" />

    <EditText
        android:id="@+id/inputPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textPasswordConfirm"
        android:layout_below="@+id/textPasswordConfirm"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/action_register"
        android:onClick="onRegisterButtonClick" />

</RelativeLayout>
